--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,3 +19,8 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+
+  fonts:
+    - family: Pacifico
+      fonts:
+        - asset: assets/font/Pacifico-Regular.ttf
