--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,10 +10,14 @@ dependencies:
   flutter:
     sdk: flutter
 
+  cupertino_icons: ^1.0.2
+  qr_flutter: ^4.1.0
+  audioplayers: ^6.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 flutter:
   uses-material-design: true
@@ -24,3 +28,7 @@ flutter:
     - family: Pacifico
       fonts:
         - asset: assets/font/Pacifico-Regular.ttf
+
+linter:
+  rules:
+    prefer_const_constructors: false
