--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   qr_flutter: ^4.1.0
   audioplayers: ^6.0.0
+  http: ^1.2.1
+  shared_preferences: ^2.2.3
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
