--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   http: ^1.2.1
   shared_preferences: ^2.2.3
   provider: ^6.0.1
+  flutter_bloc: ^8.1.5
 
 dev_dependencies:
   flutter_test:
